# AIChat

./: .env.example  .gitignore  README.md  docker-compose.dev.yml  docker-compose.yml
backend/: .env.example  Dockerfile  pyproject.toml  requirements.txt
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py  auth.py  chat.py  conversations.py  files.py
backend/app/core/: config.py  dependencies.py  sanitizer.py  security.py
backend/app/models/: __init__.py
backend/app/schemas/: __init__.py  auth.py  common.py  conversation.py  file.py  message.py
backend/app/services/: __init__.py  azure_openai.py  blob_storage.py  cosmos_db.py
backend/scripts/: create_user.py  delete_user.py  list_users.py
deploy/: README.md  azure-deploy.ps1  azure-deploy.sh  configure-backend.sh  kv-appsettings.json  kv-frontend-appsettings.json  kv-settings.json
docs/: PROJECT-GUIDE.md  api-spec.md  architecture.md  azure-setup.md  backend-guide.md  env-config.md  project-plan.md  pwa-guide.md  todo.md
frontend/: .env.example  Dockerfile  Dockerfile.dev  docker-entrypoint.sh  index.html  nginx.conf  nginx.conf.template  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
frontend/dev-dist/: sw.js
frontend/src/: App.tsx  index.css  main.tsx  vite-env.d.ts
frontend/src/hooks/: index.ts  useAppDispatch.ts  useMediaQuery.ts  useOnlineStatus.ts  useStreamingChat.ts
frontend/src/pages/: ChatPage.tsx  LoginPage.tsx  RegisterPage.tsx
frontend/src/services/: api.ts
frontend/src/store/: index.ts
prompt-ready/: index.md
(+34 files in other folders)
